<resources>
    <string name="app_name">AirBnbSerach</string>
    <string name="action_settings">Settings</string>

    <string name="title_select_date">Select Date</string>
    <string name="title_guests">Guests</string>
    <string name="title_accommodation_type">Accommodation Type</string>
    <string name="title_price">Price</string>
    <string name="title_amenities">Amenitier</string>

    <string name="hint_start_date">Check In</string>
    <string name="hint_end_date">Check out</string>
    <string name="hint_select_date">\n Select Date</string>
    <!--<string name="hint_selectEnd_date">\n -</string>-->
</resources>
