<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.da08.airbnbserach.MainActivity"
    tools:showIn="@layout/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="날짜선택"
            android:textAlignment="center"
            tools:text="@string/title_select_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_start_date"
                    android:textAlignment="center"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/btnEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_end_date"
                    android:textAlignment="center"
                    android:textAllCaps="false"/>
            </LinearLayout>
            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtGuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_guests"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"></LinearLayout>

        <TextView
            android:id="@+id/txtAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_accommodation_type"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"></LinearLayout>

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_price"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"></LinearLayout>

        <TextView
            android:id="@+id/txtAme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_amenities"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>


</ScrollView>

